--- a/BookStore/Areas/Owner/Views/FeedBacks/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/FeedBacks/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<BusinessObjects.FeedBack>
+
 @{
     ViewData["Title"] = "Feedback";
 }
@@ -11,45 +12,47 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="card-title">Feedbacks table</h5>
-                            <form class="form-inline" method="POST">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
-                                        <div class="input-group-append">
-                                            <button type="button" class="btn btn-success">Search</button>
-                                        </div>
+                            <!-- Search form -->
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="searchInput" placeholder="Search..." aria-label="Search">
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-success">Search</button>
                                     </div>
                                 </div>
-                            </form>
-                            <!-- <button type="button" class="btn btn-info">Add New Brand</button> -->
+                            </div>
+
+                            <!-- Add new feedback button -->
+                            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#feedbackModal" onclick="handleAddButton()">Add New Feedback</button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
+                                <!-- Modal content goes here -->
+                            </div>
+
                         </div>
                         <!-- Small tables -->
-                        <table class="table table-sm table-hover">
+                        <table class="table table-sm table-hover" id="feedbackTable" name="feedbackTable">
                             <thead>
                                 <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Telephone</th>
-                                    <th scope="col">Subject</th>
-                                    <th scope="col">Email</th>
-                                    <th scope="col" class="w-25">Comment</th>
+                                    <th scope="col">Feedback ID</th>
+                                    <th scope="col" class="w-50">Feedback</th>
                                     <th scope="col">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                @foreach (var feedBacks in Model)
+                            <tbody id="feedbackList">
+                                <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
+                                    No available values found.
+                                </div>
+                                @foreach (var feedback in Model)
                                 {
-                                    <tr>
-                                        <th scope="row">@feedBacks.Id</th>
-                                        <td>@feedBacks.Name</td>
-                                        <td>@feedBacks.Telephone</td>
-                                        <td>@feedBacks.Subject</td>
-                                        <td>@feedBacks.Email</td>
-                                        <td>@feedBacks.Comment</td>
+                                    <tr id="row_@feedback.Id">
+                                        <th scope="row">@feedback.Id</th>
+                                        <td>@feedback.Name</td>
                                         <td>
                                             <div class="flex-column align-items-center">
-                                                <button type="button" class="btn btn-danger">Delete</button>
-                                                <button type="button" class="btn btn-warning">Edit</button>
+                                                <button type="button" class="btn btn-danger" onclick="deleteFeedback(@feedback.Id)">Delete</button>
+                                                <button type="submit" class="btn btn-warning edit-feedback" data-toggle="modal" data-target="#feedbackModal" onclick="handleEditButton(@feedback.Id)">Edit</button>
                                             </div>
                                         </td>
                                     </tr>
@@ -57,15 +60,14 @@
                             </tbody>
                         </table>
                         <!-- End small tables -->
-
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
+</main>
 
-</main><!-- End #main -->
 @section Scripts{
+    <script src="~/js/js-owner/feedback.js"></script>
     <script src="~/js/js-admin/main.js"></script>
 }
