--- a/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
+++ b/BookStore/Areas/Owner/Views/Reviews/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<BusinessObjects.Review>
 @{
-    ViewData["Title"] = "Review";
+    ViewData["Title"] = "Reviews";
 }
 
 <main id="main" class="main">
@@ -9,52 +9,34 @@
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h5 class="card-title">Reviews table</h5>
-                            <form class="form-inline" method="POST">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="text" class="form-control" placeholder="Search..." aria-label="Search">
-                                        <div class="input-group-append">
-                                            <button type="button" class="btn btn-success">Search</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                        <!-- (Previous code remains unchanged) -->
                         <!-- Small tables -->
-                        <table class="table table-sm table-hover">
+                        <table class="table table-sm table-hover" id="reviewTable" name="reviewTable">
                             <thead>
                                 <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Username</th>
-                                    <th scope="col">Book Name</th>
+                                    <th scope="col">Review ID</th>
+                                    <th scope="col" >Name</th>
                                     <th scope="col" class="w-50">Comment</th>
-                                    <th scope="col">Date</th>
+                                    <th scope="col">Add Date</th>
                                     <th scope="col">Rate</th>
                                     <th scope="col">Action</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="reviewList">
+                                <div id="noResultsMessage" class="alert alert-warning" style="display: none;">
+                                    No available values found.
+                                </div>
                                 @foreach (var review in Model)
                                 {
-                                    <tr>
+                                    <tr id="row_@review.Id">
                                         <th scope="row">@review.Id</th>
-                                        <td>@review.User</td>
-                                        <td>@review.Book</td>
-                                        <td>
-                                            @review.Comment
-                                        </td>
+                                        <td>@review.UserId</td>
+                                        <td>@review.Comment</td>
                                         <td>@review.Date</td>
                                         <td>@review.Rate</td>
                                         <td>
                                             <div class="flex-column align-items-center">
-                                                <button type="button" class="btn btn-danger">
-                                                    Delete
-                                                </button>
-                                                <button type="button" class="btn btn-warning">
-                                                    Edit
-                                                </button>
+                                                <button type="submit" class="btn btn-danger" onclick="deleteReview(@review.Id)">Delete</button>
                                             </div>
                                         </td>
                                     </tr>
@@ -68,8 +50,8 @@
         </div>
     </section>
 </main>
-<!-- End #main -->
+
 @section Scripts{
+    <script src="~/js/js-owner/review.js"></script>
     <script src="~/js/js-admin/main.js"></script>
 }
-
