--- a/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/Views/Home/Index.cshtml
@@ -1634,5 +1634,12 @@
     <script>
         const api = "@ViewBag.api"
         localStorage.setItem("apiUrl", api);
+        if($("#userId").length > 0){
+            if(!localStorage.getItem("userId")){
+                localStorage.setItem("userId", $("#userId").val());
+            }                
+        }else{
+            localStorage.removeItem("userId");
+        }
     </script>
 }
