--- a/BookStore/Views/Shared/_LoginPartial.cshtml
+++ b/BookStore/Views/Shared/_LoginPartial.cshtml
@@ -7,9 +7,12 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
+        var user = await UserManager.GetUserAsync(User);
+
         <li class="nav-item">
             <div class="d-flex justify-content-center align-items-center">
-                <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <input type="hidden" id="userId" value="@user.Id"/>
+                <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @user.FirstName @user.LastName</a>
                 <form id="logoutForm" class="nav-link form-inline ml-2" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                     <button id="logout" type="submit" class="nav-link btn btn-link text-white">Logout</button>
                 </form>
@@ -26,4 +29,5 @@
         </div>
     }
 </ul>
+
 
