fix error logic in Cart

--- a/BookStore/Views/Home/Shop.cshtml
+++ b/BookStore/Views/Home/Shop.cshtml
@@ -101,6 +101,7 @@
 </div>
 @section Scripts {
 	<script src="~/js/main.js"></script>
+	<script src="~/js/header.js"></script>
 	<script src="~/js/shop.js"></script>
 }
 
