--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -71,52 +71,7 @@
 				{
 					var user = await UserManager.GetUserAsync(User);
 
-					<div class="header-cart-2">
-						<a class="icon-cart" href="#">
-							<i class="ti-shopping-cart"></i>
-							<span class="shop-count book-count">02</span>
-						</a>
-						<ul class="cart-dropdown">
-							<li class="single-product-cart">
-								<div class="cart-img">
-									<a href="#"><img src="~/img/cart/1.jpg" alt=""></a>
-								</div>
-								<div class="cart-title">
-									<h5><a href="#"> Bits Headphone</a></h5>
-									<h6><a href="#">Black</a></h6>
-									<span>$80.00 x 1</span>
-								</div>
-								<div class="cart-delete">
-									<a href="#"><i class="ti-trash"></i></a>
-								</div>
-							</li>
-							<li class="single-product-cart">
-								<div class="cart-img">
-									<a href="#"><img src="~/img/product/book/7.jpg" alt=""></a>
-								</div>
-								<div class="cart-title">
-									<h5><a href="#"> Bits Headphone</a></h5>
-									<h6><a href="#">Black</a></h6>
-									<span>$80.00 x 1</span>
-								</div>
-								<div class="cart-delete">
-									<a href="#"><i class="ti-trash"></i></a>
-								</div>
-							</li>
-							<li class="cart-space">
-								<div class="cart-sub">
-									<h4>Subtotal</h4>
-								</div>
-								<div class="cart-price">
-									<h4>$240.00</h4>
-								</div>
-							</li>
-							<li class="cart-btn-wrapper">
-								<a class="cart-btn btn-hover" asp-controller="Home" asp-action="Cart" asp-route-userId="@user.Id">view cart</a>
-								<a class="cart-btn btn-hover" asp-controller="Home" asp-action="CheckOut">checkout</a>
-							</li>
-						</ul>
-					</div>
+					<div class="header-cart-2" id="cart"> </div>
 
 					<!-- Cart ICON -->
 					<div class="header-cart-2">
@@ -346,6 +301,10 @@
 	<script src="~/js/owl.carousel.min.js"></script>
 	<script src="~/js/plugins.js"></script>
 	<script src="~/js/main.js"></script>
+	@if (SignInManager.IsSignedIn(User))
+	{
+		<script src="~/js/header.js"></script>
+	}
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
